# strecken-info-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml  docker-publish.yml
src/: bot.rs  change.rs  cleaning.rs  cli.rs  database.rs  error.rs  fetcher.rs  filter.rs  format.rs  lib.rs  main.rs  mastodon.rs  metrics.rs  tw.rs  user.rs  utils.rs
src/bot/: info.rs  message_sender.rs  mod.rs  planned.rs  subscribe.rs  tw.rs
src/cli/: clear_toots.rs  mod.rs  reset_disruptions.rs  show_users.rs
src/components/: mod.rs
src/components/mastodon/: format.rs  mod.rs  tw.rs
src/components/telegram/: admin.rs  format.rs  info.rs  message_sender.rs  mod.rs  show_users.rs  subscribe.rs  tw.rs  user.rs  user_filter.rs
src/components/telegram/filter/: callback.rs  command.rs  consts.rs  epsg.rs  mod.rs  model.rs  strecken_info.rs
src/components/telegram/filter_ui/: callback.rs  consts.rs  mod.rs
src/data/: clone.rs  mod.rs
src/data/strecken_info/: change.rs  fetcher.rs  mod.rs
src/data/strecken_info/format/: html.rs  mod.rs  partial_format.rs  text.rs
src/database/: mod.rs
src/database/migrations/: migration_1.rs  migration_2.rs  migration_3.rs  migration_4.rs  migration_5.rs  migration_6.rs  mod.rs
src/format/: hash.rs  mastodon.rs  mod.rs  partial_format.rs  telegram.rs
src/tests/: mod.rs  tw.rs
src/trassenfinder/: mod.rs  models.rs
tools/: migrate_sqlite_psql.py
