[package]
name = "strecken-info-bot"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/AdriDevelopsThings/strecken-info-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "strecken-info-bot"
path = "src/main.rs"

[features]
default = ["metrics", "mastodon", "telegram"]
metrics = ["dep:axum"]
mastodon = ["dep:megalodon"]
telegram = ["dep:telexide"]

[dependencies]
axum = { version = "0", optional = true, default-features = false, features = ["http1", "tokio", "tower-log"]}
chrono = "0"
chrono-tz = "0.9.0"
clap = { version = "4", features = ["derive"] }
dotenv = "0"
env_logger = "0"
futures = "0"
html-escape = "0"
log = "0"
md5 = "0"
megalodon = { version = "0", optional = true, git = "https://github.com/AdriDevelopsThings/megalodon-rs"}
r2d2 = { version = "0", default-features = false }
r2d2_sqlite = { version = "0", default-features = false, features = ["bundled"] }
regex = "1"
reqwest = { version = "0", default-features = false, features = ["rustls-tls"] }
strecken-info = { version = "0", default-features = false, features = ["rustls-tls"] }
telexide = { git = "https://github.com/AdriDevelopsThings/telexide", branch = "fixes", optional = true}
tokio = { version = "1", features = ["full"] }
typemap_rev = "0"

[profile.release]
lto = true
opt-level = 3
