[package]
name = "strecken-info-bot"
version = "0.4.0"
edition = "2021"
authors = ["AdriDoesThings <adri@adridoesthings.com>"]
repository = "https://github.com/AdriDevelopsThings/strecken-info-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "strecken-info-bot"
path = "src/main.rs"

[features]
default = ["metrics", "mastodon", "telegram"]
metrics = ["dep:axum"]
mastodon = ["dep:megalodon"]
telegram = ["dep:telexide"]

[dependencies]
axum = { version = "0", optional = true, default-features = false, features = ["http1", "tokio", "tower-log"]}
bb8 = "0"
bb8-postgres = "0"
chrono = "0"
chrono-tz = "0"
clap = { version = "4", features = ["derive"] }
dotenv = "0"
env_logger = "0"
futures = "0"
html-escape = "0"
log = "0"
md5 = "0"
megalodon = { version = "0", optional = true }
regex = "1"
reqwest = { version = "0", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
strecken-info = { version = "1", default-features = false, features = ["rustls-tls"] }
telexide = { git = "https://github.com/AdriDevelopsThings/telexide", branch = "fixes", optional = true}
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0", features = ["array-impls", "with-chrono-0_4", "with-serde_json-1"] }
typemap_rev = "0"

[profile.release]
lto = true
opt-level = 3
